--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "stream-line",
-  "homepage": "https://janj.github.io/stream-line/",
+  "homepage": "https://janj.github.io/stream-line",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
