--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "@types/react-dom": "^17.0.0",
     "apexcharts": "^3.27.3",
     "gh-pages": "^3.2.3",
+    "parse": "^3.4.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.0.10",
     "typescript": "^4.1.2",
@@ -54,7 +55,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.9",
-    "@types/react-router-dom": "^5.1.8",
+    "@types/parse": "^2.18.18",
     "@types/recharts": "^2.0.0"
   }
 }
