--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "version": "0.1.0",
   "private": false,
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
+    "@mui/material": "^5.10.6",
+    "@mui/styles": "^5.10.6",
+    "@mui/x-date-pickers": "^5.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^18.0.6",
     "apexcharts": "^3.27.3",
+    "eslint": "8.22.0",
     "gh-pages": "^3.2.3",
+    "moment": "^2.29.4",
     "parse": "^3.4.3",
     "react": "^17.0.2",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "recharts": "^2.0.10",
+    "styled-components": "^5.3.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
     "xlsx": "^0.17.0"
