--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@material-ui/data-grid": "^4.0.0-alpha.35",
+    "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "@mui/styles": "^5.10.6",
     "@mui/x-date-pickers": "^5.0.2",
@@ -31,7 +32,7 @@
     "styled-components": "^5.3.5",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1",
-    "xlsx": "^0.17.0"
+    "xlsx": "^0.17.5"
   },
   "scripts": {
     "start": "react-scripts start",
